--- a/src/app/assets/footer/footer.component.html
+++ b/src/app/assets/footer/footer.component.html
@@ -1,1 +1,24 @@
-<p>footer works!</p>
+<footer class="page-footer teal lighten-1">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Misión Tic</h5>
+          <p class="grey-text text-lighten-4">Equipo 1 - Grupo 27 del Ciclo 4.</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Miembros</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Edwin</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Camilo</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Marlon Jiménez Guzmán</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      © 2021 Copyright Text
+      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
