--- a/src/app/assets/navbar/navbar.component.html
+++ b/src/app/assets/navbar/navbar.component.html
@@ -2,11 +2,11 @@
     <div class="nav-wrapper cyan lighten-2">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Usuarios</a></li>
-        <li><a href="badges.html">Encomiendas</a></li>
-        <li><a href="badges.html">Clientes</a></li>
-        <li><a href="badges.html">Servicios</a></li>
-        <li><a href="collapsible.html">Login</a></li>
+        <li><a routerLink="/admin/get">Usuarios</a></li>
+        <li><a routerLink="/encomiendas/get">Encomiendas</a></li>
+        <li><a routerLink="/clientes/get">Clientes</a></li>
+        <li><a routerLink="/servicios/get">Servicios</a></li>
+        <li><a routerLink="/seguridad/login">Login</a></li>
       </ul>
     </div>
   </nav>
