--- a/src/app/assets/navbar/navbar.component.html
+++ b/src/app/assets/navbar/navbar.component.html
@@ -2,11 +2,16 @@
     <div class="nav-wrapper cyan lighten-2">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a routerLink="/admin/get">Usuarios</a></li>
-        <li><a routerLink="/encomiendas/get">Encomiendas</a></li>
-        <li><a routerLink="/clientes/get">Clientes</a></li>
-        <li><a routerLink="/servicios/get">Servicios</a></li>
-        <li><a routerLink="/seguridad/login">Login</a></li>
+        <li *ngIf="activeSession" ><a routerLink="/admin/get">Usuarios</a></li>
+        <li *ngIf="activeSession"><a routerLink="/encomiendas/get">Encomiendas</a></li>
+        <li *ngIf="activeSession"><a routerLink="/clientes/get">Clientes</a></li>
+        <li *ngIf="activeSession"><a routerLink="/servicios/get">Servicios</a></li>
+        <!-- <li><a routerLink="/seguridad/login">Login</a></li> --> 
+        <!-- Sesion -->
+      <li *ngIf="!activeSession"><a routerLink="/seguridad/login">Login</a></li>
+      <li *ngIf="!activeSession"><a routerLink="/admin/create">Registrarse</a></li>
+      <li *ngIf="activeSession"><a routerLink="/seguridad/logout">Cerrar Sesion</a></li>
+
       </ul>
     </div>
   </nav>
