--- a/src/app/modulos/clientes/get/get.component.html
+++ b/src/app/modulos/clientes/get/get.component.html
@@ -1,1 +1,38 @@
-<p>get works!</p>
+<div class="container">
+    <br>
+    <a routerLink="/clientes/create" class="btn">Registrar Cliente</a>
+   
+    <table class="table responsive centered">
+      <thead>
+        <tr>
+            <th >Nombre</th>
+            <th>Apellidos</th> 
+            <th>Cedula</th>
+            <th>País</th>
+            <th>Ciudad</th>
+            <th>Departamento</th>
+            <th>Dirección</th>
+            <th >Correo</th>
+            <th>Acciones</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.nombre}}</td>
+          <td>{{p.apellidos}}</td>
+          <td>{{p.cedula}}</td>
+          <td>{{p.pais}}</td>
+          <td>{{p.ciudad}}</td>
+          <td>{{p.departamento}}</td>
+          <td>{{p.direccion}}</td>
+          <td>{{p.email}}</td>
+          <td>
+            <a routerLink="/clientes/edit/{{p.id}}" class="btn">Editar</a>
+            <button class="btn red" (click)="delete(p.id)">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  
