--- a/src/app/modulos/servicios/get/get.component.html
+++ b/src/app/modulos/servicios/get/get.component.html
@@ -1,1 +1,28 @@
-<p>get works!</p>
+<div class="container">
+    <br>
+    <a routerLink="/servicios/create" class="btn">Registrar Servicios</a>
+   
+    <table class="table responsive centered">
+      <thead>
+        <tr>
+            <th>Fecha</th>
+            <th>Hora</th> 
+            <th>Valor</th>
+            <th>Acciones</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.fecha}}</td>
+          <td>{{p.hora}}</td>
+          <td>{{p.valor}}</td>
+          <td>
+            <a routerLink="/servicios/edit/{{p.id}}" class="btn">Editar</a>
+            <button class="btn red" (click)="delete(p.id)">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  
