--- a/src/app/modulos/servicios/create/create.component.html
+++ b/src/app/modulos/servicios/create/create.component.html
@@ -1,1 +1,27 @@
-<p>create works!</p>
+<div class="container">
+    <h3 class="center-align">Registrar Servicio</h3>
+    <form [formGroup]="fgValidacion" class="col s12" (ngSubmit)="store()">
+
+        <div class="row">
+            <div class="input-field col s4">
+                <input formControlName="fecha" type="Date" class="validate">
+                <label for="fecha">Fecha</label>
+            </div>
+            <div class="input-field col s4">
+                <input formControlName="hora" type="text" class="validate">
+                <label for="hora">Hora</label>
+            </div>
+            <div class="input-field col s4">
+                <input formControlName="valor" type="number" class="validate">
+                <label for="valor">Valor</label>
+            </div>
+        </div>
+
+        <div class="row center-align">
+            <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
+                name="action">Enviar
+                <i class="material-icons right">send</i>
+            </button>
+        </div>
+    </form>
+</div>
